# my_updater

./: README.md  build.gradle.kts  settings.gradle.kts
Scraper/: .gitignore  data_object.py  main.py  product.py  product_manager.py  pyproject.toml  s3_manager.py  scraper.py  scraper_activities.py  scraper_nike.py  scraper_workflow.py  temporal_manager.py  url_fetcher.py
local-development/: docker-compose.yml
my_updater/: README.md  build.gradle.kts
my_updater/local-development/: docker-compose.yml
my_updater/local-development/aws/: init-service.sh
my_updater/src/main/resources/: application.properties
my_updater/src/main/resources/db.migration/: v1__init__tables.sql
src/main/java/com/fwrrong/my_updater/: MyUpdaterApplication.java
src/main/java/com/fwrrong/my_updater/configuration/: MongoConfig.java
src/main/java/com/fwrrong/my_updater/controller/: FollowServiceController.java  ProductServiceController.java  SearchServiceController.java  UserServiceController.java
src/main/java/com/fwrrong/my_updater/exception/: AddProductException.java  AddUserException.java  DeleteUserException.java  ModifyProductException.java  UnfollowProductException.java
src/main/java/com/fwrrong/my_updater/model/: AppUser.java  Follow.java  Product.java  User.java
src/main/java/com/fwrrong/my_updater/repository/: AppUserRepository.java  FollowRepository.java  ProductRepository.java  UserRepository.java
src/main/resources/: application.properties
src/main/resources/db.migration/: v1__init__tables.sql
src/test/java/com/fwrrong/my_updater/: MyUpdaterApplicationTests.java
(+22 files in other folders)
